--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
                 <h2>Berlin</h2>
             </div>
             
+
+            <div class="destination" id="barcelona">
+                <h2>Kashmir</h2>
+            </div>
+
+            <div class="destination" id="belize">
+                <h2>Trikala</h2>
+            </div>
+
         </div>
     </div>
 
