--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <div class="destination" id="belize">
                 <h2>Trikala</h2>
             </div>
+	    
+	    <div class="destination" id="barcelona">
+                <h2>Japan</h2>
+            </div>
 
         </div>
     </div>
