Added New Destination

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                 <h2>Japan</h2>
             </div>
 
+            <div class="destination" id="belize">
+                <h2>China</h2>
+            </div>
+
         </div>
     </div>
 
