Added New Destination

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 	    <div class="destination" id="barcelona">
                 <h2>Japan</h2>
             </div>
+	    
+	    <div class="destination" id="barcelona">
+                <h2>Hauwei</h2>
+            </div>
 
         </div>
     </div>
