--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
                 <h2>China</h2>
             </div>
 
+            <div class="destination" id="barcelona">
+                <h2>Paris</h2>
+            </div>
+
         </div>
     </div>
 
