--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             <div class="destination" id="barcelona">
                 <h2>Paris</h2>
             </div>
+	    
+	     <div class="destination" id="belize">
+                <h2>Dubai</h2>
+            </div>
 
         </div>
     </div>
